# TG-schedule-bot

./: .gitignore  README.md  bot.py  log.json  parser.py  pyproject.toml
